<resources>
    <string name="app_name">Just Health</string>
    <string name="connect_button">Connect</string>
    <string name="scan_nearby">Scan For Nearby Devices</string>
    <string name="saved_measurements">Saved Measurements</string>
    <string name="save_measurement">Save</string>
    <string name="connect_by_id">Connect using Device ID</string>
    <string name="devices_found">List of Polar devices found</string>
    <string name="device_id_hint">Device ID</string>
    <string name="device_battery">Battery: </string>
    <string name="device_id">Device ID: </string>
    <string name="connect_to_ecg_button">Connect to ECG</string>
    <string name="connect_to_ppg_button">Connect to PPG</string>
    <string name="connecting_text">Connecting …</string>
    <string name="disconnect_text">Disconnect</string>
    <string name="start_measurement">Start Measurement</string>
    <string name="pause_measurement">Pause Measurement</string>
    <string name="ECG">ECG</string>
    <string name="PPG">PPG</string>
    <string name="BPM">BPM</string>
    <string name="clear">Clear</string>
    <string name="save_data">Save your measurement!</string>
    <string name="save_data_hint">Please enter filename below</string>
    <string name="temp_fileName">FileName</string>
    <string name="saved_files_hint">Display saved measurement</string>
    <string name="load_save">Load</string>
    <string name="delete_save">Delete</string>
    <string name="filename_display">FileName: </string>
    <string name="return_text">Return</string>
    <string name="waiting">Waiting for measurement…</string>
</resources>