<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/ecgBatteryText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/device_battery"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/ecgBatteryValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ecgDeviceIDText" />

    <TextView
        android:id="@+id/ecgDeviceIDText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/device_id"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/ecgBatteryText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ecgDeviceID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/connecting_text"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ecgBatteryValue"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ecgBatteryValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/connecting_text"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ecgBatteryText"
        app:layout_constraintTop_toBottomOf="@+id/ecgDeviceID" />

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ecgBatteryText" />

    <TextView
        android:id="@+id/ecgText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/ECG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <TextView
        android:id="@+id/bpmText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/BPM"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ecgSaveMeasurementButton" />

    <Button
        android:id="@+id/ecgMeasureButton"
        android:layout_width="170dp"
        android:layout_height="75dp"
        android:layout_marginTop="5dp"
        android:text="@string/start_measurement"
        app:layout_constraintEnd_toStartOf="@+id/ecgClearButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ecgText" />

    <Button
        android:id="@+id/ecgClearButton"
        android:layout_width="170dp"
        android:layout_height="75dp"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ecgMeasureButton"
        app:layout_constraintTop_toTopOf="@+id/ecgMeasureButton" />

    <Button
        android:id="@+id/ecgDisconnectButton"
        android:layout_width="170dp"
        android:layout_height="75dp"
        android:text="@string/disconnect_text"
        app:layout_constraintStart_toStartOf="@+id/ecgClearButton"
        app:layout_constraintTop_toTopOf="@+id/ecgSaveMeasurementButton" />

    <Button
        android:id="@+id/ecgSaveMeasurementButton"
        android:layout_width="170dp"
        android:layout_height="75dp"
        android:layout_marginTop="15dp"
        android:text="@string/save_measurement"
        app:layout_constraintStart_toStartOf="@+id/ecgMeasureButton"
        app:layout_constraintTop_toBottomOf="@+id/ecgMeasureButton" />

    <View
        android:id="@+id/divider3"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bpmText" />

    <TextView
        android:id="@+id/waitingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/waiting"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/divider3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ecgLineChart" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/ecgLineChart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3">

    </com.github.mikephil.charting.charts.LineChart>

</androidx.constraintlayout.widget.ConstraintLayout>